chore: added leapp angular common project to test login

--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
@@ -128,3 +128,13 @@
   font-size: 20px;
   color: $search-icon-color;
 }
+
+.user-circle {
+  border-radius: 10px;
+  color: #ffffff;
+  display: inline-block;
+  background: #00aaff;
+  width: 20px;
+  height: 20px;
+  font-size: 12px;
+}
