--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.html
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.html
@@ -30,9 +30,28 @@
 
       <button class="icon-button hide-in-taskbar" (click)="syncAll();" matTooltip="Sync all Integrations"><i class="moon-Refresh"></i></button>
 
+      <ng-container *ngIf="user === null">
+        <button class="icon-button" (click)="loginToTeamPortal();" matTooltip="Login to Portal"><i class="moon-User"></i></button>
+      </ng-container>
+      <ng-container *ngIf="user !== null">
+        <span class="user-circle" [matMenuTriggerFor]="userMenu">{{user.firstName.substring(0,1)}}{{user.lastName.substring(0,1)}}</span>
+        <mat-menu #userMenu [hasBackdrop]="false" role="menu">
+          <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
+          <div mat-menu-item>
+            <span>{{user.firstName}} {{user.lastName}}</span>
+          </div>
+          <div mat-menu-item>
+            <span>{{user.role}} - {{user.teamName}}</span>
+          </div>
+          <button mat-menu-item (click)="logoutFromTeamPortal();">
+            <i class="moon-Close"></i>&nbsp;
+            <span>Logout</span>
+          </button>
+        </mat-menu>
+      </ng-container>
+
       <div class="line-end">
-        <button class="icon-button top-right-option-button" (click)="showOptionDialog();"
-                matTooltip="Show Leapp Options"><i class="moon-Settings"></i></button>
+        <button class="icon-button top-right-option-button" (click)="showOptionDialog();" matTooltip="Show Leapp Options"><i class="moon-Settings"></i></button>
       </div>
 
       <div class="window-buttons">
