--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.html
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.html
@@ -30,24 +30,25 @@
 
       <button class="icon-button hide-in-taskbar" (click)="syncAll();" matTooltip="Sync all Integrations"><i class="moon-Refresh"></i></button>
 
-      <ng-container *ngIf="user === null">
+      <ng-container *ngIf="teamUser === null">
         <button class="icon-button" (click)="loginToTeamPortal();" matTooltip="Login to Portal"><i class="moon-User"></i></button>
       </ng-container>
-      <ng-container *ngIf="user !== null">
-        <app-leapp-sync (syncEvent)="syncSecrets($event)">
-          <span>Sync</span>
-        </app-leapp-sync>
-        <span class="user-circle" [matMenuTriggerFor]="userMenu">{{user.firstName.substring(0,1)}}{{user.lastName.substring(0,1)}}</span>
+      <ng-container *ngIf="teamUser !== null">
+        <span class="user-circle" [matMenuTriggerFor]="userMenu">{{teamUser.firstName.substring(0,1)}}{{teamUser.lastName.substring(0,1)}}</span>
         <mat-menu #userMenu [hasBackdrop]="false" role="menu">
           <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
           <div mat-menu-item>
-            <span>{{user.firstName}} {{user.lastName}}</span>
+            <span>{{teamUser.firstName}} {{teamUser.lastName}}</span>
           </div>
           <div mat-menu-item>
-            <span>{{user.role}} - {{user.teamName}}</span>
+            <span>{{teamUser.role}} - {{teamUser.teamName}}</span>
           </div>
           <div mat-menu-item>
           </div>
+          <button mat-menu-item (click)="syncTeamSecrets();">
+            <i class="moon-Refresh"></i>&nbsp;
+            <span>Sync</span>
+          </button>
           <button mat-menu-item (click)="logoutFromTeamPortal();">
             <i class="moon-Close"></i>&nbsp;
             <span>Logout</span>
@@ -60,9 +61,9 @@
       </div>
 
       <div class="window-buttons">
-        <span class="minimize" (click)="electronService.currentWindow.minimize()"><img src="assets/images/windows_minimize{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '_dark' : ''}}.png" alt="" title=""></span>
+        <span class="minimize" (click)="appNativeService.currentWindow.minimize()"><img src="assets/images/windows_minimize{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '_dark' : ''}}.png" alt="" title=""></span>
         <span class="maximize {{compactMode ? 'disabled' : ''}}" (click)="windowMaximizeAction();"><img src="assets/images/windows_maximize{{windowButtonDetectTheme()}}.png" alt="" title=""></span>
-        <span class="quit" (click)="electronService.currentWindow.hide()"><img src="assets/images/windows_close{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '_dark' : ''}}.png" alt="" title=""></span>
+        <span class="quit" (click)="appNativeService.currentWindow.hide()"><img src="assets/images/windows_close{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '_dark' : ''}}.png" alt="" title=""></span>
       </div>
     </div>
 
