chore: added workspace selection menu in the side bar component and fixed team-service signOut

--- a/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
+++ b/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
@@ -1,5 +1,27 @@
 <mat-list>
-
+  <mat-list-item class="workspace-selector">
+    <div mat-line class="workspace-selector-line" [matMenuTriggerFor]="workspaceSelectionMenu" (click)="setTrigger()" #workspaceSelectionTrigger="matMenuTrigger">
+      <i class="moon-Home"></i><span>{{workspaceName}}</span><i class="moon-Caret-down"></i>
+      <mat-menu #workspaceSelectionMenu="matMenu" [hasBackdrop]="false" role="menu">
+        <ng-container *ngIf="teamUser === null || teamUser === undefined">
+          <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
+          <div mat-menu-item>
+            <span>User not logged in</span>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="teamUser !== null && teamUser !== undefined">
+          <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
+          <div mat-menu-item>
+            <span>My Workspace</span>
+          </div>
+          <!-- TODO add an ngFor when supporting multiple teams-->
+          <div mat-menu-item>
+            <span>{{teamUser.teamName}}</span>
+          </div>
+        </ng-container>
+      </mat-menu>
+    </div>
+  </mat-list-item>
   <mat-list-item (click)="resetFilters();" class="{{this.showAll ? 'selected-segment' : ''}}">
     <div mat-line><i class="moon-Row"></i> <span>All Sessions</span></div>
   </mat-list-item>
