--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
@@ -138,3 +138,8 @@
   height: 20px;
   font-size: 12px;
 }
+
+.disabled-add-session:hover, .disabled-add-session {
+  opacity: 0.2 !important;
+  cursor: initial !important;
+}
