--- a/packages/desktop-app/src/assets/scss/mixins/palette.scss
+++ b/packages/desktop-app/src/assets/scss/mixins/palette.scss
@@ -43,6 +43,7 @@ $focused-element: rgba($main-color-light,0.13);
 $background: #ffffff;
 $light-color: #ffffff;
 $bright-red: #FF3B30;
+$local-workspace-blu: #29A9E1;
 
 /* Leapp Dark-Mode color palette */
 $dark-main-text-color: #DEDCDD;
