--- a/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
+++ b/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
@@ -1,48 +1,57 @@
 <mat-list>
   <mat-list-item class="workspace-menu">
-    <div mat-line class="workspace-menu-line" [matMenuTriggerFor]="workspaceMenu" (click)="setTrigger($event)" #workspaceSelectionTrigger="matMenuTrigger">
-      <div class="workspace-icon-container">
-        <i class="moon-Home"></i>
-      </div>
-      <span class="workspace-name">{{workspaceName}}</span>
+    <div mat-line class="workspace-menu-line" [matMenuTriggerFor]="workspaceMenu" (click)="setTrigger($event)"
+         #workspaceSelectionTrigger="matMenuTrigger">
+      <ng-container *ngIf="isLocalWorkspaceSelected">
+        <div class="workspace-icon-container local">
+          <i class="moon-Home"></i>
+        </div>
+        <span class="workspace-name">{{workspaceState.name}}</span>
+      </ng-container>
+      <ng-container *ngIf="!isLocalWorkspaceSelected">
+        <div class="workspace-icon-container remote">
+          <span>{{loggedUser.teamName[0].toUpperCase()}}</span>
+        </div>
+        <span class="workspace-name">{{loggedUser.teamName}}</span>
+      </ng-container>
       <i class="moon-Caret-down"></i>
       <mat-menu #workspaceMenu="matMenu" [hasBackdrop]="false" role="menu">
-        <ng-container *ngIf="teamUser === null || teamUser === undefined">
-          <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
+        <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
 
-          <div mat-menu-item>
-            <span>User not logged in</span>
+        <div mat-menu-item class="workspace-select-item">
+          <div class="workspace-icon-container local">
+            <i class="moon-Home"></i>
           </div>
+          <span class="workspace-name">{{workspaceState.name}}</span>
+          <img *ngIf="isLocalWorkspaceSelected" src="assets/images/check.svg" alt="sign-in">
+        </div>
 
-          <div class="divider"></div>
-          <div mat-menu-item>
-            <img src="assets/images/sign-in.svg" alt="sign-in">
-            <span>Sign-in Workspace</span>
+        <div *ngIf="isUserLoggedIn" mat-menu-item class="workspace-select-item">
+          <div class="workspace-icon-container remote">
+            <span>{{loggedUser.teamName[0].toUpperCase()}}</span>
           </div>
-          <div mat-menu-item>
-            <img src="assets/images/buildings.svg" alt="manage-workspaces">
-            <span>Manage Workspaces</span>
-          </div>
-          <div class="divider"></div>
-          <div mat-menu-item (click)="showOptionDialog()">
-            <img src="assets/images/gear.svg" alt="settings">
-            <span>Settings...</span>
-          </div>
-          <div mat-menu-item>
-            <img src="assets/images/sign-out.svg" alt="sign-out">
-            <span>Lock</span>
-          </div>
-        </ng-container>
-        <ng-container *ngIf="teamUser !== null && teamUser !== undefined">
-          <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
-          <div mat-menu-item (click)="switchWorkspace('local')">
-            <span>My Workspace</span>
-          </div>
-          <!-- TODO add an ngFor when supporting multiple teams-->
-          <div mat-menu-item (click)="switchWorkspace()">
-            <span>{{teamUser.teamName}}</span>
-          </div>
-        </ng-container>
+          <span class="workspace-name">{{loggedUser.teamName}}</span>
+          <img *ngIf="!isLocalWorkspaceSelected" src="assets/images/check.svg" alt="sign-in">
+        </div>
+
+        <div class="divider"></div>
+        <div [disabled]="isUserLoggedIn" mat-menu-item (click)="loginToLeappTeam()">
+          <img src="assets/images/sign-in.svg" alt="sign-in">
+          <span>Sign-in Workspace</span>
+        </div>
+        <div mat-menu-item>
+          <img src="assets/images/buildings.svg" alt="manage-workspaces">
+          <span>Manage Workspaces</span>
+        </div>
+        <div class="divider"></div>
+        <div mat-menu-item (click)="showOptionDialog()">
+          <img src="assets/images/gear.svg" alt="settings">
+          <span>Settings...</span>
+        </div>
+        <div [disabled]="!isUserLoggedIn" mat-menu-item (click)="logoutFromLeappTeam()">
+          <img src="assets/images/sign-out.svg" alt="sign-out">
+          <span>Lock</span>
+        </div>
       </mat-menu>
     </div>
   </mat-list-item>
@@ -63,8 +72,11 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <mat-list-item [disableRipple]="true" *ngFor="let segment of segments" [ngClass]="selectedSegmentCheck(segment)" (click)="applySegmentFilter(segment, $event);">
-        <div mat-line class="visible-option-menu"><i class="moon-Tag"></i> <span>{{segment.name}}</span><i class="moon-Close" (click)="showConfirmationDialog(segment, $event)"></i></div>
+      <mat-list-item [disableRipple]="true" *ngFor="let segment of segments" [ngClass]="selectedSegmentCheck(segment)"
+                     (click)="applySegmentFilter(segment, $event);">
+        <div mat-line class="visible-option-menu"><i class="moon-Tag"></i> <span>{{segment.name}}</span><i class="moon-Close"
+                                                                                                           (click)="showConfirmationDialog(segment, $event)"></i>
+        </div>
       </mat-list-item>
 
     </mat-expansion-panel>
